[package]
name = "spi-loopback"
version = "0.1.0"
authors = ["Will Tekulve <tekulve.will@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "~0.2"
cortex-m = "~0.6"
cortex-m-semihosting = "~0.3"
nb = "~0.1"

[dependencies.feather_m0]
version = "~0.5"
features = ["default", "unproven"]

[dependencies.embedded-hal]
version = "~0.2"
features = ["unproven"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
